# rust-matrix

./: Cargo.toml  README.md
src/: complex_number.rs  lib.rs  main.rs  matrix_algebra.rs  pow.rs  sqrt.rs
src/entry/: mod.rs
src/matrix_entry/: mod.rs
